GC関連のオプションを変更